crates/ruff_server/src/server/api/requests/snapshots/ruff_server__server__api__requests__format_range__tests__format_range_unmatched_lists-3.snap
---
source: crates/ruff_server/src/server/api/requests/format_range.rs
expression: output3
---
0+0
1 + 1
{
	2 + 2
}
3 + 3
